FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b/error.log
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp: In member function ‘virtual void dolfin::dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:73:39: error: expression cannot be used as a function
           values[0] = (((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps)))) ? a*4*pi*G*mgb : 0;
                                       ^
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:73:74: error: expression cannot be used as a function
           values[0] = (((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps)))) ? a*4*pi*G*mgb : 0;
                                                                          ^
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:73:96: error: expression cannot be used as a function
           values[0] = (((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps)))) ? a*4*pi*G*mgb : 0;
                                                                                                ^
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:73:131: error: expression cannot be used as a function
           values[0] = (((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps)))) ? a*4*pi*G*mgb : 0;
                                                                                                                                   ^
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:73:153: error: expression cannot be used as a function
           values[0] = (((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps)))) ? a*4*pi*G*mgb : 0;
                                                                                                                                                         ^
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:73:188: error: expression cannot be used as a function
           values[0] = (((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps))) && ((x_close(1-eps) <= x[0]) && (x[0]<= x_close(1+eps)))) ? a*4*pi*G*mgb : 0;
                                                                                                                                                                                            ^
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp: In member function ‘virtual double dolfin::dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b::get_property(std::__cxx11::string) const’:
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:85:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a") return a;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "eps") return eps;
           ^~
/tmp/tmpr0xwxvri/dolfin_expression_9c2a523e43f2c74102cbca2c7183ca8b.cpp:85:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a") return a;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "eps") return eps;
                                               ^~
